[tool.poetry]
name = "ia-search"
version = "0.1.0"
description = ""
authors = ["Sriram Viswanathan <sriramvi@andrew.cmu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
internetarchive = "^3.0.2"
click = "^8.1.3"
beautifulsoup4 = "^4.11.1"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chewfiles = "ia_search.cli:main"

